--- a/lib/messagebundles/MessagesBundle_da.properties
+++ b/lib/messagebundles/MessagesBundle_da.properties
@@ -1065,8 +1065,6 @@ HTML_PAGE_MAGNET=Magnet links til hurtig download (hvis du har LimeWire instaler
 ###################################################################
 # Key/value pairs for ConnectionView
 ###################################################################
-#### CV_PANEL_TITLE=Connected Hosts
-CV_PANEL_TITLE=Forbundne værter
 #### CV_COLUMN_HOST=Host
 CV_COLUMN_HOST=Vært
 #### CV_COLUMN_STATUS=Status
@@ -1095,7 +1093,7 @@ CV_COLUMN_QRP_USED=QRP tom
 CV_BUTTON_REMOVE=Fjern
 #### CV_BUTTON_TOOLTIP_REMOVE=Remove the Selected Connections
 CV_BUTTON_TOOLTIP_REMOVE=Fjern den valgte forbindelse.
-#### CV_BUTTON_ADD=Add
+#### CV_BUTTON_ADD=Add...
 CV_BUTTON_ADD=Tilføj
 #### CV_BUTTON_TOOLTIP_ADD=Create a New Outgoing Connection
 CV_BUTTON_TOOLTIP_ADD=Skab en ny udgående forbindelse.
@@ -1129,12 +1127,20 @@ CV_TABLE_STRING_INCOMING=Indkommende
 CV_TABLE_STRING_OUTGOING=Udgående
 #### CV_TABLE_STRING_CONNECTED_ON=Connected on
 CV_TABLE_STRING_CONNECTED_ON=Forbundet kl. 
-#### CV_STRING_CLIENT=[Leaf]
+#### CV_STRING_CLIENT=Leaf
 CV_STRING_CLIENT=[Periferi]
-#### CV_STRING_ULTRAPEER=[Ultrapeer]
+#### CV_STRING_ULTRAPEER=Ultrapeer
 CV_STRING_ULTRAPEER=[Ultrapeer]
+#### CV_STRING_STATUS=Connection Status:
+#? CV_STRING_STATUS=
 #### CV_TABLE_STRING_KBPSEC=KB/s
 CV_TABLE_STRING_KBPSEC=KB/s
+#### CV_ADD_HOST_LABEL=Host:
+#? CV_ADD_HOST_LABEL=
+#### CV_ADD_PORT_LABEL=Port:
+#? CV_ADD_PORT_LABEL=
+#### CV_ADD_DIALOG_TITLE=Add Gnutella Connection
+#? CV_ADD_DIALOG_TITLE=
 
 ################################################################################
 # Key/value pairs for strings in the library window
@@ -2209,11 +2215,11 @@ OPTIONS_ITUNES_PREFERENCE_LABEL=Du kan få LimeWire til at importere nyligt downl
 OPTIONS_ITUNES_DAAP_PREFERENCE_TITLE=Deling
 #### OPTIONS_ITUNES_DAAP_PREFERENCE_LABEL=You can share your Music on the Local Area Network and make it accessible for iTunes and other Digital Audio Access Protocol (DAAP) enabled Players.\n\nEnable Compatability Mode if you experience problems with iTunes Sharing. This mode uses more resources and is slower, but may fix problems.
 OPTIONS_ITUNES_DAAP_PREFERENCE_LABEL=Du kan dele din musik på et lokalt netværk (LAN) og gøre det tilgængeligt for iTunes og andre afspillere, der anvender "Digital Audio Access" protekoller.\n\nEnable Compatability Mode - denne tilstand anvendes, hvis du får problemer med deling via iTunes. Denne tilstand er langsommere, men kan løse problemet.
-#### OPTIONS_ITUNES_DAAP_SUPPORT_DAAP_ENABLED_LABEL=Share my Music:
+#### OPTIONS_ITUNES_DAAP_SUPPORT_DAAP_ENABLED_LABEL=Share my music:
 OPTIONS_ITUNES_DAAP_SUPPORT_DAAP_ENABLED_LABEL=Del min musik:
 #### OPTIONS_ITUNES_DAAP_SUPPORT_SERVICE_NAME_LABEL=Shared name:
 OPTIONS_ITUNES_DAAP_SUPPORT_SERVICE_NAME_LABEL=Delt navn:
-#### OPTIONS_ITUNES_DAAP_SUPPORT_USE_BIO_LABEL=Compatability Mode
+#### OPTIONS_ITUNES_DAAP_SUPPORT_USE_BIO_LABEL=Compatibility mode:
 OPTIONS_ITUNES_DAAP_SUPPORT_USE_BIO_LABEL=Compatability Mode
 
 #### OPTIONS_ITUNES_DAAP_PASSWORD_TITLE=Require password
