--- a/lib/messagebundles/MessagesBundle_ja.properties
+++ b/lib/messagebundles/MessagesBundle_ja.properties
@@ -1065,8 +1065,6 @@ HTML_PAGE_MAGNET=\u7d20\u65e9\u3044\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u306e\u3
 ###################################################################
 # Key/value pairs for ConnectionView
 ###################################################################
-#### CV_PANEL_TITLE=Connected Hosts
-CV_PANEL_TITLE=\u63a5\u7d9a\u3057\u305f\u30db\u30b9\u30c8
 #### CV_COLUMN_HOST=Host
 CV_COLUMN_HOST=\u30db\u30b9\u30c8
 #### CV_COLUMN_STATUS=Status
@@ -1095,7 +1093,7 @@ CV_COLUMN_QRP_USED=QRP \u7a7a\u304d
 CV_BUTTON_REMOVE=\u9664\u53bb
 #### CV_BUTTON_TOOLTIP_REMOVE=Remove the Selected Connections
 CV_BUTTON_TOOLTIP_REMOVE=\u9078\u629e\u3057\u305f\u30db\u30b9\u30c8\u3092\u9664\u53bb\u3059\u308b
-#### CV_BUTTON_ADD=Add
+#### CV_BUTTON_ADD=Add...
 CV_BUTTON_ADD=\u8ffd\u52a0
 #### CV_BUTTON_TOOLTIP_ADD=Create a New Outgoing Connection
 CV_BUTTON_TOOLTIP_ADD=\u65b0\u898f\u306b\u5916\u5411\u304d\u306e\u63a5\u7d9a\u3092\u78ba\u7acb\u3059\u308b
@@ -1129,12 +1127,20 @@ CV_TABLE_STRING_INCOMING=\u5185\u5411\u304d
 CV_TABLE_STRING_OUTGOING=\u5916\u5411\u304d
 #### CV_TABLE_STRING_CONNECTED_ON=Connected on
 CV_TABLE_STRING_CONNECTED_ON=\u63a5\u7d9a\u3055\u308c\u307e\u3057\u305f
-#### CV_STRING_CLIENT=[Leaf]
+#### CV_STRING_CLIENT=Leaf
 CV_STRING_CLIENT=[Leaf]
-#### CV_STRING_ULTRAPEER=[Ultrapeer]
+#### CV_STRING_ULTRAPEER=Ultrapeer
 CV_STRING_ULTRAPEER=[Ultrapeer]
+#### CV_STRING_STATUS=Connection Status:
+#? CV_STRING_STATUS=
 #### CV_TABLE_STRING_KBPSEC=KB/s
 CV_TABLE_STRING_KBPSEC=KB/\u79d2
+#### CV_ADD_HOST_LABEL=Host:
+#? CV_ADD_HOST_LABEL=
+#### CV_ADD_PORT_LABEL=Port:
+#? CV_ADD_PORT_LABEL=
+#### CV_ADD_DIALOG_TITLE=Add Gnutella Connection
+#? CV_ADD_DIALOG_TITLE=
 
 ################################################################################
 # Key/value pairs for strings in the library window
@@ -2209,11 +2215,11 @@ OPTIONS_ITUNES_PREFERENCE_LABEL=iTunes \u30b5\u30dd\u30fc\u30c8\u3092\u6709\u52b
 OPTIONS_ITUNES_DAAP_PREFERENCE_TITLE=\u5171\u6709
 #### OPTIONS_ITUNES_DAAP_PREFERENCE_LABEL=You can share your Music on the Local Area Network and make it accessible for iTunes and other Digital Audio Access Protocol (DAAP) enabled Players.\n\nEnable Compatability Mode if you experience problems with iTunes Sharing. This mode uses more resources and is slower, but may fix problems.
 OPTIONS_ITUNES_DAAP_PREFERENCE_LABEL=\u30ed\u30fc\u30ab\u30eb\u30cd\u30c3\u30c8\u30ef\u30fc\u30af\u4e0a\u3067\u30d5\u30a1\u30a4\u30eb\u3092\u5171\u6709\u3057\u3001 iTunes \u3084\u4ed6\u306e Digital Audio Access Protocol (DAAP) \u306b\u5bfe\u5fdc\u3057\u305f\u30d7\u30ec\u30a4\u30e4\u30fc\u3067\u3001 \u30a2\u30af\u30bb\u30b9\u3092\u8a31\u53ef\u3059\u308b\u3053\u3068\u304c\u3067\u304d\u307e\u3059\u3002\n\n\u3082\u3057 iTunes \u3067\u554f\u984c\u304c\u3042\u308b\u5834\u5408\u306f\u3001 \u4e92\u63db\u30e2\u30fc\u30c9\u3092\u6709\u52b9\u306b\u3057\u3066\u4e0b\u3055\u3044\u3002 \u3053\u306e\u30e2\u30fc\u30c9\u306f\u591a\u304f\u306e\u30ea\u30bd\u30fc\u30b9\u3092\u6d88\u8cbb\u3057\u9045\u304f\u306a\u308a\u307e\u3059\u304c\u3001 \u554f\u984c\u3092\u89e3\u6c7a\u3059\u308b\u304b\u3082\u3057\u308c\u307e\u305b\u3093\u3002
-#### OPTIONS_ITUNES_DAAP_SUPPORT_DAAP_ENABLED_LABEL=Share my Music:
+#### OPTIONS_ITUNES_DAAP_SUPPORT_DAAP_ENABLED_LABEL=Share my music:
 OPTIONS_ITUNES_DAAP_SUPPORT_DAAP_ENABLED_LABEL=\u97f3\u697d\u3092\u5171\u6709\uff1a
 #### OPTIONS_ITUNES_DAAP_SUPPORT_SERVICE_NAME_LABEL=Shared name:
 OPTIONS_ITUNES_DAAP_SUPPORT_SERVICE_NAME_LABEL=\u5171\u6709\u540d\uff1a
-#### OPTIONS_ITUNES_DAAP_SUPPORT_USE_BIO_LABEL=Compatability Mode
+#### OPTIONS_ITUNES_DAAP_SUPPORT_USE_BIO_LABEL=Compatibility mode:
 OPTIONS_ITUNES_DAAP_SUPPORT_USE_BIO_LABEL=\u4e92\u63db\u30e2\u30fc\u30c9
 
 #### OPTIONS_ITUNES_DAAP_PASSWORD_TITLE=Require password
