--- a/lib/messagebundles/MessagesBundle_ru.properties
+++ b/lib/messagebundles/MessagesBundle_ru.properties
@@ -1065,8 +1065,6 @@ HTML_PAGE_MAGNET=Magnet-\u0441\u0441\u044b\u043b\u043e\u043a \u0431\u044b\u0441\
 ###################################################################
 # Key/value pairs for ConnectionView
 ###################################################################
-#### CV_PANEL_TITLE=Connected Hosts
-CV_PANEL_TITLE=\u041f\u043e\u0434\u043a\u043b\u044e\u0447\u0435\u043d\u043d\u044b\u0435 \u0445\u043e\u0441\u0442\u044b
 #### CV_COLUMN_HOST=Host
 CV_COLUMN_HOST=\u0425\u043e\u0441\u0442
 #### CV_COLUMN_STATUS=Status
@@ -1095,7 +1093,7 @@ CV_COLUMN_COMPRESSION=\u0421\u0436\u0430\u0442\u043e (I/O)
 CV_BUTTON_REMOVE=\u0423\u0434\u0430\u043b\u0438\u0442\u044c
 #### CV_BUTTON_TOOLTIP_REMOVE=Remove the Selected Connections
 CV_BUTTON_TOOLTIP_REMOVE=\u0423\u0434\u0430\u043b\u0438\u0442\u044c \u0432\u044b\u0431\u0440\u0430\u043d\u043d\u044b\u0435 \u0441\u043e\u0435\u0434\u0438\u043d\u0435\u043d\u0438\u044f
-#### CV_BUTTON_ADD=Add
+#### CV_BUTTON_ADD=Add...
 CV_BUTTON_ADD=\u0414\u043e\u0431\u0430\u0432\u0438\u0442\u044c
 #### CV_BUTTON_TOOLTIP_ADD=Create a New Outgoing Connection
 CV_BUTTON_TOOLTIP_ADD=\u0421\u043e\u0437\u0434\u0430\u0442\u044c \u043d\u043e\u0432\u043e\u0435 \u0438\u0441\u0445\u043e\u0434\u044f\u0449\u0435\u0435 \u0441\u043e\u0435\u0434\u0438\u043d\u0435\u043d\u0438\u0435
@@ -1129,12 +1127,20 @@ CV_TABLE_STRING_INCOMING=\u0412\u0445\u043e\u0434\u044f\u0449\u0435\u0435
 CV_TABLE_STRING_OUTGOING=\u0418\u0441\u0445\u043e\u0434\u044f\u0449\u0435\u0435
 #### CV_TABLE_STRING_CONNECTED_ON=Connected on
 CV_TABLE_STRING_CONNECTED_ON=\u041f\u043e\u0434\u043a\u043b\u044e\u0447\u0435\u043d\u043e \u0441
-#### CV_STRING_CLIENT=[Leaf]
+#### CV_STRING_CLIENT=Leaf
 CV_STRING_CLIENT=[\u041b\u0438\u0441\u0442]
-#### CV_STRING_ULTRAPEER=[Ultrapeer]
+#### CV_STRING_ULTRAPEER=Ultrapeer
 CV_STRING_ULTRAPEER=[Ultrapeer]
+#### CV_STRING_STATUS=Connection Status:
+#? CV_STRING_STATUS=
 #### CV_TABLE_STRING_KBPSEC=KB/s
 CV_TABLE_STRING_KBPSEC=KB/\u0441\u0435\u043a
+#### CV_ADD_HOST_LABEL=Host:
+#? CV_ADD_HOST_LABEL=
+#### CV_ADD_PORT_LABEL=Port:
+#? CV_ADD_PORT_LABEL=
+#### CV_ADD_DIALOG_TITLE=Add Gnutella Connection
+#? CV_ADD_DIALOG_TITLE=
 
 ################################################################################
 # Key/value pairs for strings in the library window
@@ -2209,11 +2215,11 @@ OPTIONS_ITUNES_PREFERENCE_LABEL=\u0412\u044b \u043c\u043e\u0436\u0435\u0442\u043
 OPTIONS_ITUNES_DAAP_PREFERENCE_TITLE=\u0414\u043e\u0441\u0442\u0443\u043f
 #### OPTIONS_ITUNES_DAAP_PREFERENCE_LABEL=You can share your Music on the Local Area Network and make it accessible for iTunes and other Digital Audio Access Protocol (DAAP) enabled Players.\n\nEnable Compatability Mode if you experience problems with iTunes Sharing. This mode uses more resources and is slower, but may fix problems.
 OPTIONS_ITUNES_DAAP_PREFERENCE_LABEL=\u0412\u044b \u043c\u043e\u0436\u0435\u0442\u0435 \u0440\u0430\u0437\u0434\u0430\u0442\u044c \u0441\u0432\u043e\u044e \u043c\u0443\u0437\u044b\u043a\u0443 \u0432 \u043b\u043e\u043a\u0430\u043b\u044c\u043d\u043e\u0439 \u0441\u0435\u0442\u0438 \u0438 \u0441\u0434\u0435\u043b\u0430\u0442\u044c \u0435\u0451 \u0434\u043e\u0441\u0442\u0443\u043f\u043d\u043e\u0439 \u0434\u043b\u044f iTunes \u0438 \u0434\u0440\u0443\u0433\u0438\u0445 \u043f\u0440\u043e\u0438\u0433\u0440\u044b\u0432\u0430\u0442\u0435\u043b\u0435\u0439 \u043f\u043e\u0434\u0434\u0435\u0440\u0436\u0438\u0432\u0430\u044e\u0449\u0438\u0445 \u041f\u0440\u043e\u0442\u043e\u043a\u043e\u043b \u0414\u043e\u0441\u0442\u0443\u043f\u0430 \u043a \u0426\u0438\u0444\u0440\u043e\u0432\u043e\u043c\u0443 \u0410\u0443\u0434\u0438\u043e (Digital Audio Access Protocol, DAAP).\n\n\u041f\u0440\u0438 \u043d\u0430\u043b\u0438\u0447\u0438\u0438 \u043f\u0440\u043e\u0431\u043b\u0435\u043c \u0432\u043a\u043b\u044e\u0447\u0438\u0442\u0435 \u0440\u0435\u0436\u0438\u043c \u0441\u043e\u0432\u043c\u0435\u0441\u0442\u0438\u043c\u043e\u0441\u0442\u0438.
-#### OPTIONS_ITUNES_DAAP_SUPPORT_DAAP_ENABLED_LABEL=Share my Music:
+#### OPTIONS_ITUNES_DAAP_SUPPORT_DAAP_ENABLED_LABEL=Share my music:
 OPTIONS_ITUNES_DAAP_SUPPORT_DAAP_ENABLED_LABEL=\u041e\u0442\u043a\u0440\u044b\u0442\u044c \u0434\u043e\u0441\u0442\u0443\u043f \u043a \u043c\u043e\u0435\u0439 \u043c\u0443\u0437\u044b\u043a\u0435:
 #### OPTIONS_ITUNES_DAAP_SUPPORT_SERVICE_NAME_LABEL=Shared name:
 OPTIONS_ITUNES_DAAP_SUPPORT_SERVICE_NAME_LABEL=\u0418\u043c\u044f \u0440\u0435\u0441\u0443\u0440\u0441\u0430:
-#### OPTIONS_ITUNES_DAAP_SUPPORT_USE_BIO_LABEL=Compatability Mode
+#### OPTIONS_ITUNES_DAAP_SUPPORT_USE_BIO_LABEL=Compatibility mode:
 OPTIONS_ITUNES_DAAP_SUPPORT_USE_BIO_LABEL=\u0420\u0435\u0436\u0438\u043c \u0441\u043e\u0432\u043c\u0435\u0441\u0442\u0438\u043c\u043e\u0441\u0442\u0438
 
 #### OPTIONS_ITUNES_DAAP_PASSWORD_TITLE=Require password
