--- a/lib/messagebundles/MessagesBundle_fr.properties
+++ b/lib/messagebundles/MessagesBundle_fr.properties
@@ -1065,8 +1065,6 @@ HTML_PAGE_MAGNET=Liens Magnet de téléchargement rapide (si vous avez installé Li
 ###################################################################
 # Key/value pairs for ConnectionView
 ###################################################################
-#### CV_PANEL_TITLE=Connected Hosts
-CV_PANEL_TITLE=Hôtes connectés
 #### CV_COLUMN_HOST=Host
 CV_COLUMN_HOST=Hôte
 #### CV_COLUMN_STATUS=Status
@@ -1095,7 +1093,7 @@ CV_COLUMN_QRP_USED=QRP vide (%)
 CV_BUTTON_REMOVE=Ôter
 #### CV_BUTTON_TOOLTIP_REMOVE=Remove the Selected Connections
 CV_BUTTON_TOOLTIP_REMOVE=Enlève la connexion sélectionnée
-#### CV_BUTTON_ADD=Add
+#### CV_BUTTON_ADD=Add...
 CV_BUTTON_ADD=Ajouter
 #### CV_BUTTON_TOOLTIP_ADD=Create a New Outgoing Connection
 CV_BUTTON_TOOLTIP_ADD=Crée une nouvelle connexion sortante
@@ -1129,12 +1127,20 @@ CV_TABLE_STRING_INCOMING=Entrant
 CV_TABLE_STRING_OUTGOING=Sortant
 #### CV_TABLE_STRING_CONNECTED_ON=Connected on
 CV_TABLE_STRING_CONNECTED_ON=Connecté depuis le
-#### CV_STRING_CLIENT=[Leaf]
+#### CV_STRING_CLIENT=Leaf
 CV_STRING_CLIENT=[Terminal]
-#### CV_STRING_ULTRAPEER=[Ultrapeer]
+#### CV_STRING_ULTRAPEER=Ultrapeer
 CV_STRING_ULTRAPEER=[Ultrapair]
+#### CV_STRING_STATUS=Connection Status:
+#? CV_STRING_STATUS=
 #### CV_TABLE_STRING_KBPSEC=KB/s
 CV_TABLE_STRING_KBPSEC=Ko/s
+#### CV_ADD_HOST_LABEL=Host:
+#? CV_ADD_HOST_LABEL=
+#### CV_ADD_PORT_LABEL=Port:
+#? CV_ADD_PORT_LABEL=
+#### CV_ADD_DIALOG_TITLE=Add Gnutella Connection
+#? CV_ADD_DIALOG_TITLE=
 
 ################################################################################
 # Key/value pairs for strings in the library window
@@ -2209,11 +2215,11 @@ OPTIONS_ITUNES_PREFERENCE_LABEL=Vous pouvez activer le support pour iTunes (Mac 
 OPTIONS_ITUNES_DAAP_PREFERENCE_TITLE=Partage
 #### OPTIONS_ITUNES_DAAP_PREFERENCE_LABEL=You can share your Music on the Local Area Network and make it accessible for iTunes and other Digital Audio Access Protocol (DAAP) enabled Players.\n\nEnable Compatability Mode if you experience problems with iTunes Sharing. This mode uses more resources and is slower, but may fix problems.
 OPTIONS_ITUNES_DAAP_PREFERENCE_LABEL=Vous pouvez partager votre musique sur le réseau local et la rendre accessible pour iTunes ou d'autres lecteurs supportant le protocole DAAP.\n\n Activez le mode de compatibilité (BIO) si vous éprouvez des problèmes avec le Partage iTunes. Ce mode utilise davantage de ressources et est plus lent, mais peut éviter certains problèmes.
-#### OPTIONS_ITUNES_DAAP_SUPPORT_DAAP_ENABLED_LABEL=Share my Music:
+#### OPTIONS_ITUNES_DAAP_SUPPORT_DAAP_ENABLED_LABEL=Share my music:
 OPTIONS_ITUNES_DAAP_SUPPORT_DAAP_ENABLED_LABEL=Partager ma musique
 #### OPTIONS_ITUNES_DAAP_SUPPORT_SERVICE_NAME_LABEL=Shared name:
 OPTIONS_ITUNES_DAAP_SUPPORT_SERVICE_NAME_LABEL=Nom partagé\u00a0:
-#### OPTIONS_ITUNES_DAAP_SUPPORT_USE_BIO_LABEL=Compatability Mode
+#### OPTIONS_ITUNES_DAAP_SUPPORT_USE_BIO_LABEL=Compatibility mode:
 OPTIONS_ITUNES_DAAP_SUPPORT_USE_BIO_LABEL=Mode de compatibilité (BIO)
 
 #### OPTIONS_ITUNES_DAAP_PASSWORD_TITLE=Require password
