Strings for the Add Gnutella Connection dialog

--- a/lib/messagebundles/MessagesBundle_fr.properties
+++ b/lib/messagebundles/MessagesBundle_fr.properties
@@ -1132,15 +1132,15 @@ CV_STRING_CLIENT=[Terminal]
 #### CV_STRING_ULTRAPEER=Ultrapeer
 CV_STRING_ULTRAPEER=[Ultrapair]
 #### CV_STRING_STATUS=Connection Status:
-#? CV_STRING_STATUS=
+CV_STRING_STATUS=État de la connexion
 #### CV_TABLE_STRING_KBPSEC=KB/s
 CV_TABLE_STRING_KBPSEC=Ko/s
 #### CV_ADD_HOST_LABEL=Host:
-#? CV_ADD_HOST_LABEL=
+CV_ADD_HOST_LABEL=Hôte\u00a0:
 #### CV_ADD_PORT_LABEL=Port:
-#? CV_ADD_PORT_LABEL=
+CV_ADD_PORT_LABEL=Port\u00a0:
 #### CV_ADD_DIALOG_TITLE=Add Gnutella Connection
-#? CV_ADD_DIALOG_TITLE=
+CV_ADD_DIALOG_TITLE=Ajouter une connexion Gnutella
 
 ################################################################################
 # Key/value pairs for strings in the library window
