Some obviously missing translations

--- a/lib/messagebundles/MessagesBundle_da.properties
+++ b/lib/messagebundles/MessagesBundle_da.properties
@@ -1,5 +1,5 @@
 ################################################################################
-# Messages Bundle for LimeWire 4.1.11
+# Messages Bundle for LimeWire 4.2.7
 # Specialization for: Danish - Denmark
 # Created by Jesper Stemann Andersen, additions by Niels A. Jørgensen
 ################################################################################
@@ -1132,13 +1132,13 @@ CV_STRING_CLIENT=[Periferi]
 #### CV_STRING_ULTRAPEER=Ultrapeer
 CV_STRING_ULTRAPEER=[Ultrapeer]
 #### CV_STRING_STATUS=Connection Status:
-#? CV_STRING_STATUS=
+CV_STRING_STATUS=Forbindelsestatus:
 #### CV_TABLE_STRING_KBPSEC=KB/s
 CV_TABLE_STRING_KBPSEC=KB/s
 #### CV_ADD_HOST_LABEL=Host:
-#? CV_ADD_HOST_LABEL=
+CV_ADD_HOST_LABEL=Vært:
 #### CV_ADD_PORT_LABEL=Port:
-#? CV_ADD_PORT_LABEL=
+CV_ADD_PORT_LABEL=Port:
 #### CV_ADD_DIALOG_TITLE=Add Gnutella Connection
 #? CV_ADD_DIALOG_TITLE=
 
@@ -2589,7 +2589,7 @@ OPTIONS_PROXY_LOGIN_PASSWORD_LABEL=Adgangskode
 #### STATS_BANDWIDTH_PANE_TITLE=Bandwidth
 STATS_BANDWIDTH_PANE_TITLE=Båndbredde
 #### STATS_BANDWIDTH_PANE_LABEL=Bandwidth statistics include complete information on all bandwidth sent upstream and downstream. Click on one of the categories to see the desired statistics.
-STATS_BANDWIDTH_PANE_LABEL=STATS_BANDWIDTH_PANE_LABEL=Båndbredde statistik inkluderer komplet information om al båndbredde sendt udgående og indkommende. Klik på en af kategorierne for at se den ønskede statistik.
+STATS_BANDWIDTH_PANE_LABEL=Båndbredde statistik inkluderer komplet information om al båndbredde sendt udgående og indkommende. Klik på en af kategorierne for at se den ønskede statistik.
 
 #### STATS_NET_PANE_TITLE=Network
 STATS_NET_PANE_TITLE=Netværk
