--- a/lib/messagebundles/MessagesBundle_de.properties
+++ b/lib/messagebundles/MessagesBundle_de.properties
@@ -1,5 +1,5 @@
 ################################################################################
-# Messages Bundle for LimeWire 4.1.11
+# Messages Bundle for LimeWire 4.2.6
 # Specialization for: German - Germany
 # Revision by Ralf Peter Bosse, additions by Marco & Frank Ebert, Jens-Uwe Mager, Gregorio Roper
 ################################################################################
@@ -1136,9 +1136,9 @@ CV_STRING_ULTRAPEER=[Ultrapeer]
 #### CV_TABLE_STRING_KBPSEC=KB/s
 CV_TABLE_STRING_KBPSEC=KB/s
 #### CV_ADD_HOST_LABEL=Host:
-#? CV_ADD_HOST_LABEL=
+CV_ADD_HOST_LABEL=Rechner:
 #### CV_ADD_PORT_LABEL=Port:
-#? CV_ADD_PORT_LABEL=
+CV_ADD_PORT_LABEL=Port:
 #### CV_ADD_DIALOG_TITLE=Add Gnutella Connection
 #? CV_ADD_DIALOG_TITLE=
 
@@ -2212,7 +2212,7 @@ OPTIONS_ITUNES_PREFERENCE_LABEL=Sie können hier die iTunes Unterstützung aktivie
 # Key/Value pairs for the iTunes/DAAP options in the options window
 ################################################################################
 #### OPTIONS_ITUNES_DAAP_PREFERENCE_TITLE=Sharing
-#? OPTIONS_ITUNES_DAAP_PREFERENCE_TITLE=
+OPTIONS_ITUNES_DAAP_PREFERENCE_TITLE=Freigeben
 #### OPTIONS_ITUNES_DAAP_PREFERENCE_LABEL=You can share your Music on the Local Area Network and make it accessible for iTunes and other Digital Audio Access Protocol (DAAP) enabled Players.\n\nEnable Compatability Mode if you experience problems with iTunes Sharing. This mode uses more resources and is slower, but may fix problems.
 #? OPTIONS_ITUNES_DAAP_PREFERENCE_LABEL=
 #### OPTIONS_ITUNES_DAAP_SUPPORT_DAAP_ENABLED_LABEL=Share my music:
