update CC stuff.  license is stored-as so we can send the full thing and optionally verify on the remote side.  license is read from both OGGs and MP3s.  added a new 'License Type' field that is an enumeration, currently just 'Creative Commons'.  updated LimeXMLDocument to scan the data in the license and see update the license-type automatically.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -803,7 +803,7 @@ META_EDITOR_PRICE_LABEL=Price:
 META_EDITOR_LINK_LABEL=Link:
 META_EDITOR_ACTION_LABEL=Action:
 META_EDITOR_STARS_LABEL=Stars:
-META_EDITOR_LICENSE_LABEL=Creative Commons License URI:
+META_EDITOR_LICENSE_LABEL=License:
 
 META_EDITOR_SIZE_LABEL=Size:
 META_EDITOR_DATE_MODIFIED_LABEL=Date Modified:
