column in library for licenses.  right now, 'View License' just auto-verifies.  need to add licenses package which will show the status, that it's verifying, etc..

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -657,6 +657,7 @@ LIBRARY_TABLE_TYPE=Type
 LIBRARY_TABLE_PATH=Path
 LIBRARY_TABLE_HITCOUNT=Hits
 LIBRARY_TABLE_NUMALTLOC=Locations
+LIBRARY_TABLE_LICENSE=License
 LIBRARY_TABLE_UPLOAD_COUNT=Uploads
 LIBRARY_TREE_NEW_FOLDER_LABEL=New Folder
 LIBRARY_TREE_UNSHARE_FOLDER_LABEL=Stop Sharing
