Correct some accents.

--- a/lib/messagebundles/MessagesBundle_ro.properties
+++ b/lib/messagebundles/MessagesBundle_ro.properties
@@ -4,9 +4,9 @@
 # Thanks to: Celestin Stahie.
 ################################################################################
 LOCALE_LANGUAGE_CODE=ro
-LOCALE_LANGUAGE_NAME=Romana
+LOCALE_LANGUAGE_NAME=Rom\u00e2n\u0103
 LOCALE_COUNTRY_CODE=
-LOCALE_COUNTRY_NAME=Romania
+LOCALE_COUNTRY_NAME=Rom\u00e2nia
 LOCALE_VARIANT_CODE=
 LOCALE_VARIANT_NAME=International
 LOCALE_SCRIPT_CODE=Latn
