--- a/lib/messagebundles/MessagesBundle_sk.properties
+++ b/lib/messagebundles/MessagesBundle_sk.properties
@@ -1,12 +1,12 @@
 ################################################################################
-# Messages Bundle for LimeWire 2.8.5
-# Specialization for: Slovak - Slovakia
+# Messages Bundle for LimeWire 4.2.6
+# Specialization for: Slovak - Slovakian Republic
 # Dummy resources bundle for missing translation.
 ################################################################################
 LOCALE_LANGUAGE_CODE=sk
-LOCALE_LANGUAGE_NAME=Sloven\u010dina
+LOCALE_LANGUAGE_NAME=Slovensky
 LOCALE_COUNTRY_CODE=
-LOCALE_COUNTRY_NAME=Slovensk\u00e1 republic
+LOCALE_COUNTRY_NAME=Slovenskej republiky
 LOCALE_VARIANT_CODE=
 LOCALE_VARIANT_NAME=International
 LOCALE_SCRIPT_CODE=Latn
