A few more statistics messages

--- a/lib/messagebundles/MessagesBundle_da.properties
+++ b/lib/messagebundles/MessagesBundle_da.properties
@@ -2782,11 +2782,11 @@ STATS_RECEIVED_BYTES_ALL_LABEL=Totalt antal kilobytes for Gnutella meddelelser m
 #### STATS_DUPLICATE_RECEIVED_BYTES_TCP_QUERIES_TITLE=Duplicate TCP
 STATS_DUPLICATE_RECEIVED_BYTES_TCP_QUERIES_TITLE=Dupliker TCP
 #### STATS_DUPLICATE_RECEIVED_BYTES_TCP_QUERIES_LABEL=Total kilobytes in duplicate queries received over TCP versus the total number of queries.
-#? STATS_DUPLICATE_RECEIVED_BYTES_TCP_QUERIES_LABEL=
+STATS_DUPLICATE_RECEIVED_BYTES_TCP_QUERIES_LABEL=Totalt antal kilobytes for duplikerede forespørgsler modtaget via TCP versus det totale antal af forespørgsler.
 #### STATS_DUPLICATE_RECEIVED_BYTES_MULTICAST_QUERIES_TITLE=Duplicate Multicast
 STATS_DUPLICATE_RECEIVED_BYTES_MULTICAST_QUERIES_TITLE=Dupliker Multicast
 #### STATS_DUPLICATE_RECEIVED_BYTES_MULTICAST_QUERIES_LABEL=Total kilobytes in duplicate queries received over Multicast versus the total number of queries.
-#? STATS_DUPLICATE_RECEIVED_BYTES_MULTICAST_QUERIES_LABEL=
+STATS_DUPLICATE_RECEIVED_BYTES_MULTICAST_QUERIES_LABEL=Totalt antal kilobytes for duplikerede forespørgsler modtaget via Multicast versus det totale antal af forespørgsler.
 # Advanced Gnutella Message hops/ttl for queries in kilobytes
 #### STATS_QUERY_REQUEST_HOPS_BYTES_TITLE=Hops
 STATS_QUERY_REQUEST_HOPS_BYTES_TITLE=Hops
@@ -2925,7 +2925,7 @@ STATS_LIME_RECEIVED_BYTES_UDP_QUERIES_TITLE=Forespørgsler
 #### STATS_LIME_RECEIVED_BYTES_UDP_QUERIES_LABEL=Kilobytes for UDP queries received from all Gnutella clients versus other LimeWires.
 #? STATS_LIME_RECEIVED_BYTES_UDP_QUERIES_LABEL=
 #### STATS_LIME_RECEIVED_BYTES_UDP_QUERY_REPLIES_TITLE=Query Hits
-#? STATS_LIME_RECEIVED_BYTES_UDP_QUERY_REPLIES_TITLE=
+STATS_LIME_RECEIVED_BYTES_UDP_QUERY_REPLIES_TITLE=Forespørgsels hits
 #### STATS_LIME_RECEIVED_BYTES_UDP_QUERY_REPLIES_LABEL=Kilobytes for UDP query hits received from all Gnutella clients versus other LimeWires.
 #? STATS_LIME_RECEIVED_BYTES_UDP_QUERY_REPLIES_LABEL=
 #### STATS_LIME_RECEIVED_BYTES_UDP_PUSH_REQUESTS_TITLE=Pushes
@@ -2946,11 +2946,11 @@ STATS_LIME_RECEIVED_BYTES_MULTICAST_PING_REPLIES_TITLE=Pongs
 #### STATS_LIME_RECEIVED_BYTES_MULTICAST_PING_REPLIES_LABEL=Kilobytes for Multicast pongs received from all Gnutella clients versus other LimeWires.
 #? STATS_LIME_RECEIVED_BYTES_MULTICAST_PING_REPLIES_LABEL=
 #### STATS_LIME_RECEIVED_BYTES_MULTICAST_QUERIES_TITLE=Queries
-#? STATS_LIME_RECEIVED_BYTES_MULTICAST_QUERIES_TITLE=
+STATS_LIME_RECEIVED_BYTES_MULTICAST_QUERIES_TITLE=Forespørgsler
 #### STATS_LIME_RECEIVED_BYTES_MULTICAST_QUERIES_LABEL=Kilobytes for Multicast queries received from all Gnutella clients versus other LimeWires.
 #? STATS_LIME_RECEIVED_BYTES_MULTICAST_QUERIES_LABEL=
 #### STATS_LIME_RECEIVED_BYTES_MULTICAST_QUERY_REPLIES_TITLE=Query Hits
-#? STATS_LIME_RECEIVED_BYTES_MULTICAST_QUERY_REPLIES_TITLE=
+STATS_LIME_RECEIVED_BYTES_MULTICAST_QUERY_REPLIES_TITLE=Forespørgsels hits
 #### STATS_LIME_RECEIVED_BYTES_MULTICAST_QUERY_REPLIES_LABEL=Kilobytes for Multicast query hits received from all Gnutella clients versus other LimeWires.
 #? STATS_LIME_RECEIVED_BYTES_MULTICAST_QUERY_REPLIES_LABEL=
 #### STATS_LIME_RECEIVED_BYTES_MULTICAST_PUSH_REQUESTS_TITLE=Pushes
@@ -3227,7 +3227,7 @@ STATS_LIME_SENT_BYTES_UDP_QUERIES_TITLE=Forespørgsler
 #### STATS_LIME_SENT_BYTES_UDP_QUERIES_LABEL=Kilobytes for UDP queries sent from all Gnutella clients versus other LimeWires.
 #? STATS_LIME_SENT_BYTES_UDP_QUERIES_LABEL=
 #### STATS_LIME_SENT_BYTES_UDP_QUERY_REPLIES_TITLE=Query Hits
-#? STATS_LIME_SENT_BYTES_UDP_QUERY_REPLIES_TITLE=
+STATS_LIME_SENT_BYTES_UDP_QUERY_REPLIES_TITLE=Forespørgsels hits
 #### STATS_LIME_SENT_BYTES_UDP_QUERY_REPLIES_LABEL=Kilobytes for UDP query hits sent from all Gnutella clients versus other LimeWires.
 #? STATS_LIME_SENT_BYTES_UDP_QUERY_REPLIES_LABEL=
 #### STATS_LIME_SENT_BYTES_UDP_PUSH_REQUESTS_TITLE=Pushes
@@ -3609,13 +3609,13 @@ ERROR_PUSH_INVALID_PORT=Ikke brugbar port til Push
 #### ERROR_PUSH_INVALID_ADDRESS=Invalid Push Address
 ERROR_PUSH_INVALID_ADDRESS=Ikke brugbar Push adresse
 #### ERROR_PUSH_INVALID_PAYLOAD=Invalid Push Payload
-#? ERROR_PUSH_INVALID_PAYLOAD=
+ERROR_PUSH_INVALID_PAYLOAD=Ikke brugbar Push anmodninger
 #### ERROR_ALL_VENDOR_ERRORS=All Vendor Message Errors
 #? ERROR_ALL_VENDOR_ERRORS=
 #### ERROR_VENDOR_INVALID_ID=Invalid ID
 ERROR_VENDOR_INVALID_ID=Ikke brugbar ID
 #### ERROR_VENDOR_INVALID_SELECTOR=Invalid Selector
-#? ERROR_VENDOR_INVALID_SELECTOR=
+ERROR_VENDOR_INVALID_SELECTOR=Ikke brugbar selektor
 #### ERROR_VENDOR_INVALID_VERSION=Invalid Version
 ERROR_VENDOR_INVALID_VERSION=Ikke brugbar version
 #### ERROR_VENDOR_INVALID_PAYLOAD=Invalid Payload
