synchronizing message bundles.

--- a/lib/messagebundles/MessagesBundle_sk.properties
+++ b/lib/messagebundles/MessagesBundle_sk.properties
@@ -6,7 +6,7 @@
 LOCALE_LANGUAGE_CODE=sk
 LOCALE_LANGUAGE_NAME=Slovensky
 LOCALE_COUNTRY_CODE=
-LOCALE_COUNTRY_NAME=Slovenskej republiky
+LOCALE_COUNTRY_NAME=Slovenskej Republiky
 LOCALE_VARIANT_CODE=
 LOCALE_VARIANT_NAME=International
 LOCALE_SCRIPT_CODE=Latn
