--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1039,12 +1039,7 @@ NO_PREVIEW_BEGIN=There is nothing to preview for file
 NO_PREVIEW_END=.
 ERROR_CANT_RESUME_START=The file
 ERROR_CANT_RESUME_END=is not a valid incomplete file and cannot be resumed.
-ERROR_LOCATING_BROWSER_THEMES=LimeWire could not locate your browser. The LimeWire skins address is:\n"http://www.limewire.com/skins".
-ERROR_LOCATING_BROWSER_SUPPORT=LimeWire could not locate your browser. The LimeWire support address is:\n"http://www.limewire.com/support".
-ERROR_LOCATING_BROWSER_FAQ=LimeWire could not locate your browser. The LimeWire FAQ address is:\n"http://www.limewire.com/support/faq.htm".
-ERROR_LOCATING_BROWSER_FORUM=LimeWire could not locate your browser. The LimeWire forum address is:\n"http://www.limewire.com/forum.htm".
-ERROR_LOCATING_BROWSER_FRIEND=LimeWire could not locate your browser. The LimeWire "Tell a friend" form address is:\n"http://www.limewire.com/index.jsp/tell_friend".
-ERROR_LOCATING_BROWSER_GENERAL=LimeWire could not locate your default browser.
+ERROR_OPEN_URL=LimeWire could not locate your web browser to display the following webpage:
 ERROR_ACCESSING_SAVE_DIRECTORY=Could not access the save directory. Please select a new save directory in the Options menu and try again.
 ERROR_DEL_META_USER=Cannot remove unsaved info.
 ERROR_DEL_META_SYSTEM=Unable to remove data.
@@ -1072,6 +1067,11 @@ ERROR_ITUNES_INTEGRATION=An error has occurred with LimeWire's iTunes integratio
 ERROR_PROPS_CORRUPTED=A file used to save your preferences was corrupted. LimeWire will use default values.
 ERROR_SEARCH_TOO_LARGE=Your search is too long. Please make your search smaller and try again.
 ERROR_XML_SEARCH_TOO_LARGE=Your search is too specific. Please make your search smaller and try again.
+
+################################################################################
+# Messages for Creative Commons Licensing
+################################################################################
+LICENSE_CC_TITLE=License Details
 
 ################################################################################
 # Keys for the titles of the options panes. The corresponding values represent
