column in search results showing CC.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -396,6 +396,7 @@ RESULT_PANEL_LOCATION=Location
 RESULT_PANEL_COUNT=#
 RESULT_PANEL_VENDOR=Vendor
 RESULT_PANEL_ADDED=Created
+RESULT_PANEL_LICENSE=License
 
 #Filter labels.
 SEARCH_FILTER_ALL=All
