--- a/lib/messagebundles/MessagesBundle_ar.properties
+++ b/lib/messagebundles/MessagesBundle_ar.properties
@@ -600,9 +600,9 @@ SEARCH_SEARCHING_LABEL=\u062c\u0627\u0631\u064a \u0627\u0644\u0628\u062d\u062b..
 #### SEARCH_VIRUS_MSG_ONE=One of the selected files is an executable
 SEARCH_VIRUS_MSG_ONE=\u0648\u0627\u062d\u062f \u0645\u0646 \u0627\u0644\u0645\u0644\u0641\u0627\u062a \u0627\u0644\u0645\u062e\u062a\u0627\u0631\u0629 \u0628\u0631\u0646\u0627\u0645\u062c
 #### SEARCH_VIRUS_MSG_TWO=program and could contain a virus. Are
-SEARCH_VIRUS_MSG_TWO=\u0642\u0627\u0628\u0644 \u0644\u0644\u062a\u0646\u0641\u064a\u0630 \u0648\u0642\u062f \u064a\u062d\u062a\u0648\u064a \u0639\u0644\u0649 \u0641\u064a\u0631\u0648\u0633. \u0647\u0644
+SEARCH_VIRUS_MSG_TWO=\u0642\u0627\u0628\u0644 \u0644\u0644\u062a\u0646\u0641\u064a\u0630 \u0648\u0642\u062f \u064a\u062d\u062a\u0648\u064a \u0639\u0644\u0649 \u0641\u064a\u0631\u0648\u0633.
 #### SEARCH_VIRUS_MSG_THREE=you sure you want to download it?
-SEARCH_VIRUS_MSG_THREE=\u062a\u0631\u063a\u0628 \u0628\u0627\u0644\u0641\u0639\u0644 \u0641\u064a \u062a\u0646\u0632\u064a\u0644\u0647 \u061f
+SEARCH_VIRUS_MSG_THREE=\u0647\u0644 \u062a\u0631\u063a\u0628 \u0628\u0627\u0644\u0641\u0639\u0644 \u0641\u064a \u062a\u0646\u0632\u064a\u0644\u0647\u061f
 #### SEARCH_SHOW_MESSAGE_MSG=Don't show this message again
 SEARCH_SHOW_MESSAGE_MSG=\u0639\u062f\u0645 \u0625\u0638\u0647\u0627\u0631 \u0647\u0630\u0647 \u0627\u0644\u0631\u0633\u0627\u0644\u0629 \u0645\u0631\u0629 \u0623\u062e\u0631\u0649
 #### SEARCH_DOWNLOAD_DIALOG_CONFIRM=Download Request
@@ -1136,9 +1136,9 @@ CV_STRING_ULTRAPEER=[\u0646\u062f \u0641\u0627\u0626\u0642]
 #### CV_TABLE_STRING_KBPSEC=KB/s
 CV_TABLE_STRING_KBPSEC=\u0643.\u0628/\u062b
 #### CV_ADD_HOST_LABEL=Host:
-#? CV_ADD_HOST_LABEL=
+CV_ADD_HOST_LABEL=\u0627\u0644\u0645\u0636\u064a\u0641:
 #### CV_ADD_PORT_LABEL=Port:
-#? CV_ADD_PORT_LABEL=
+CV_ADD_PORT_LABEL=\u0627\u0644\u0645\u0646\u0641\u0630:
 #### CV_ADD_DIALOG_TITLE=Add Gnutella Connection
 #? CV_ADD_DIALOG_TITLE=
 
