--- a/lib/messagebundles/MessagesBundle_es.properties
+++ b/lib/messagebundles/MessagesBundle_es.properties
@@ -1136,9 +1136,9 @@ CV_STRING_ULTRAPEER=[Ultrapar]
 #### CV_TABLE_STRING_KBPSEC=KB/s
 CV_TABLE_STRING_KBPSEC=KB/s
 #### CV_ADD_HOST_LABEL=Host:
-#? CV_ADD_HOST_LABEL=
+CV_ADD_HOST_LABEL=Computadora:
 #### CV_ADD_PORT_LABEL=Port:
-#? CV_ADD_PORT_LABEL=
+CV_ADD_PORT_LABEL=Puerto:
 #### CV_ADD_DIALOG_TITLE=Add Gnutella Connection
 #? CV_ADD_DIALOG_TITLE=
 
@@ -1401,7 +1401,7 @@ META_EDITOR_CANCEL_BUTTON_LABEL=Cancelar
 #### META_EDITOR_COMMENTS_LABEL=Comments:
 #? META_EDITOR_COMMENTS_LABEL=
 #### META_EDITOR_SHA1_LABEL=SHA1:
-#? META_EDITOR_SHA1_LABEL=
+META_EDITOR_SHA1_LABEL=SHA1:
 #### META_EDITOR_PRICE_LABEL=Price:
 #? META_EDITOR_PRICE_LABEL=
 #### META_EDITOR_LINK_LABEL=Link:
@@ -1412,11 +1412,11 @@ META_EDITOR_CANCEL_BUTTON_LABEL=Cancelar
 #? META_EDITOR_STARS_LABEL=
 
 #### META_EDITOR_SIZE_LABEL=Size:
-META_EDITOR_SIZE_LABEL=Size:
+META_EDITOR_SIZE_LABEL=Tamaño:
 #### META_EDITOR_DATE_MODIFIED_LABEL=Date Modified:
-META_EDITOR_DATE_MODIFIED_LABEL=Date Modified:
+#? META_EDITOR_DATE_MODIFIED_LABEL=
 #### META_EDITOR_KIND_LABEL=Kind:
-META_EDITOR_KIND_LABEL=Kind:
+#? META_EDITOR_KIND_LABEL=
 #### META_EDITOR_MP3_KIND_LABEL=MPEG-1 Audio Layer 3
 META_EDITOR_MP3_KIND_LABEL=MPEG-1 Audio Layer 3
 #### META_EDITOR_MP4_KIND_LABEL=MPEG-4 Audio
@@ -3899,7 +3899,7 @@ UP_OUTGOING_REJECT_FULL=Rechazo saliente (Completo)
 #### UP_OUTGOING_GUIDANCE_FOLLOWED=Out Acc. (Followed Guidance)
 UP_OUTGOING_GUIDANCE_FOLLOWED=Aceptación saliente (guía ignorada)
 #### UP_OUTGOING_GUIDANCE_IGNORED=Out Acc. (Ignored Guidance)
-#? UP_OUTGOING_GUIDANCE_IGNORED=
+UP_OUTGOING_GUIDANCE_IGNORED=Aceptación saliente (sin guía)
 #### UP_OUTGOING_ACCEPT=Out Acc. (No Guidance)
 UP_OUTGOING_ACCEPT=Aceptación saliente (sin guía)
 #### UP_INCOMING_REJECT_LEAF=In Rej. (Leaf)
