--- a/lib/messagebundles/MessagesBundle_ja.properties
+++ b/lib/messagebundles/MessagesBundle_ja.properties
@@ -1,5 +1,5 @@
 ################################################################################
-# Messages Bundle for LimeWire 4.1.19
+# Messages Bundle for LimeWire 4.2.6
 # Specialization for: Japanese (Nippongo) - Japan
 # Thanks to: Yuji T. Additions by Takanobu Torigoe & Shinada Atsushi, "heavy_baby".
 ################################################################################
@@ -1136,9 +1136,9 @@ CV_STRING_ULTRAPEER=[Ultrapeer]
 #### CV_TABLE_STRING_KBPSEC=KB/s
 CV_TABLE_STRING_KBPSEC=KB/\u79d2
 #### CV_ADD_HOST_LABEL=Host:
-#? CV_ADD_HOST_LABEL=
+CV_ADD_HOST_LABEL=\u30db\u30b9\u30c8\uff1a
 #### CV_ADD_PORT_LABEL=Port:
-#? CV_ADD_PORT_LABEL=
+CV_ADD_PORT_LABEL=\u30dd\u30fc\u30c8\uff1a
 #### CV_ADD_DIALOG_TITLE=Add Gnutella Connection
 #? CV_ADD_DIALOG_TITLE=
 
