--- a/lib/messagebundles/MessagesBundle_nl.properties
+++ b/lib/messagebundles/MessagesBundle_nl.properties
@@ -975,7 +975,7 @@ UPLOAD_CHAT_BUTTON_TIP=Chat met deze gebruiker.
 #### UPLOAD_TABLE_STRING_NAME=Name
 UPLOAD_TABLE_STRING_NAME=Naam
 #### UPLOAD_TABLE_STRING_HOST=Host
-UPLOAD_TABLE_STRING_HOST=Host
+UPLOAD_TABLE_STRING_HOST=Gebruiker
 #### UPLOAD_TABLE_STRING_SIZE=Size
 UPLOAD_TABLE_STRING_SIZE=Grootte
 #### UPLOAD_TABLE_STRING_STATUS=Status
@@ -1066,7 +1066,7 @@ HTML_PAGE_MAGNET=Magnet links for fast downloads (if you have LimeWire installed
 # Key/value pairs for ConnectionView
 ###################################################################
 #### CV_COLUMN_HOST=Host
-CV_COLUMN_HOST=Computer
+CV_COLUMN_HOST=Gebruiker
 #### CV_COLUMN_STATUS=Status
 CV_COLUMN_STATUS=Status
 #### CV_COLUMN_MESSAGE=Messages (I/O)
@@ -1136,9 +1136,9 @@ CV_STRING_ULTRAPEER=[Ultrapeer]
 #### CV_TABLE_STRING_KBPSEC=KB/s
 CV_TABLE_STRING_KBPSEC=kB/s
 #### CV_ADD_HOST_LABEL=Host:
-#? CV_ADD_HOST_LABEL=
+CV_ADD_HOST_LABEL=Gebruiker:
 #### CV_ADD_PORT_LABEL=Port:
-#? CV_ADD_PORT_LABEL=
+CV_ADD_PORT_LABEL=Poort:
 #### CV_ADD_DIALOG_TITLE=Add Gnutella Connection
 #? CV_ADD_DIALOG_TITLE=
 
@@ -1480,7 +1480,7 @@ CHAT_STOP_BUTTON_TIP=Beëindig het chatten met deze gebruiker.
 #### CHAT_WITH_LABEL=Chatting with
 CHAT_WITH_LABEL=Aan het chatten met
 #### CHAT_HOST_UNAVAILABLE=Host is unavailable
-CHAT_HOST_UNAVAILABLE=De computer is niet bereikbaar
+CHAT_HOST_UNAVAILABLE=De gebruiker is niet bereikbaar
 #### CHAT_YOU=You
 CHAT_YOU=U
 
