start translation from template as an example

--- a/lib/messagebundles/MessagesBundle_tl.properties
+++ b/lib/messagebundles/MessagesBundle_tl.properties
@@ -41,7 +41,7 @@ HAS_TIPS_OF_THE_DAY=false
 # Keys/value pairs for general strings that can be used in any components
 ################################################################################
 #### GENERAL_OK_BUTTON_LABEL=OK
-#? GENERAL_OK_BUTTON_LABEL=
+GENERAL_OK_BUTTON_LABEL=OK
 #### GENERAL_OK_BUTTON_TIP=Apply Operation.
 #? GENERAL_OK_BUTTON_TIP=
 #### GENERAL_CANCEL_BUTTON_LABEL=Cancel
@@ -73,7 +73,7 @@ HAS_TIPS_OF_THE_DAY=false
 
 #Options
 #### OPTIONS_BUTTONS_OK_LABEL=OK
-#? OPTIONS_BUTTONS_OK_LABEL=
+OPTIONS_BUTTONS_OK_LABEL=OK
 #### OPTIONS_BUTTONS_OK_TIP=Apply Your Changes and Close Window
 #? OPTIONS_BUTTONS_OK_TIP=
 #### OPTIONS_BUTTONS_CANCEL_LABEL=Cancel
@@ -95,9 +95,9 @@ HAS_TIPS_OF_THE_DAY=false
 # Key/value pairs for general terms, such as "yes" and "no"
 ################################################################################
 #### YES=Yes
-#? YES=
+YES=Oo
 #### NO=No
-#? NO=
+NO=Hindi
 
 ################################################################################
 # Key/value pairs for general informative terms
@@ -165,7 +165,7 @@ HAS_TIPS_OF_THE_DAY=false
 #### ABOUT_SCROLL_CHECK_BOX_LABEL=Automatically Scroll
 #? ABOUT_SCROLL_CHECK_BOX_LABEL=
 #### ABOUT_BUTTON_LABEL=OK
-#? ABOUT_BUTTON_LABEL=
+ABOUT_BUTTON_LABEL=OK
 #### ABOUT_BUTTON_TIP=Close the About Window
 #? ABOUT_BUTTON_TIP=
 
@@ -1358,7 +1358,7 @@ HAS_TIPS_OF_THE_DAY=false
 #### VIEW_CHOOSER_TITLE=Choose View
 #? VIEW_CHOOSER_TITLE=
 #### VIEW_CHOOSER_OK_BUTTON_LABEL=OK
-#? VIEW_CHOOSER_OK_BUTTON_LABEL=
+VIEW_CHOOSER_OK_BUTTON_LABEL=OK
 #### VIEW_CHOOSER_CANCEL_BUTTON_LABEL=Cancel
 #? VIEW_CHOOSER_CANCEL_BUTTON_LABEL=
 #IndentingPanel
@@ -1368,7 +1368,7 @@ HAS_TIPS_OF_THE_DAY=false
 #### META_EDITOR_INFO_TAB_LABEL=Info
 #? META_EDITOR_INFO_TAB_LABEL=
 #### META_EDITOR_OK_BUTTON_LABEL=OK
-#? META_EDITOR_OK_BUTTON_LABEL=
+META_EDITOR_OK_BUTTON_LABEL=OK
 #### META_EDITOR_CANCEL_BUTTON_LABEL=Cancel
 #? META_EDITOR_CANCEL_BUTTON_LABEL=
 #### META_EDITOR_ADVANCED_BUTTON_LABEL=Advanced
@@ -1735,7 +1735,7 @@ HAS_TIPS_OF_THE_DAY=false
 #### ERROR_INTERNAL_COPY=Copy Report
 #? ERROR_INTERNAL_COPY=
 #### ERROR_INTERNAL_OK=OK
-#? ERROR_INTERNAL_OK=
+ERROR_INTERNAL_OK=OK
 #### ERROR_INTERNAL_ALWAYS_SEND=Always Send Immediately
 #? ERROR_INTERNAL_ALWAYS_SEND=
 #### ERROR_INTERNAL_ALWAYS_REVIEW=Always Ask For Review
